# kornia_io

./: .gitignore  Cargo.toml  README.md  setup.py
.github/workflows/: all.yml  ci.yml
benches/: my_benchmark.rs
clients/: performance.py
docker/: build_devel.sh  devel.Dockerfile  devel.sh
examples/: read_image.py  read_image_dlpack.py
hello-rust/: Cargo.toml  pyproject.toml
hello-rust/src/: lib.rs  main.rs  tensor.rs
hello-rust/test/: Cargo.toml
hello-rust/test/src/: lib.rs
kornia_io/: __init__.py  image.py  io.py  luxonis_camera_stream.py  opencv_camera_stream.py  video.py  viz.py  viz_old.py
kornia_io/core/: __init__.py  image.py
src/: dlpack.rs  dlpack_old.rs  dlpack_py.rs  io.rs  lib.rs  main.rs  tensor.rs  viz.rs
