[package]
name = "kornia_io"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
pyo3 = { version = "0.15.1", features = ["extension-module"] }

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "my_benchmark"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kornia_rs"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "kornia_app"
path = "src/main.rs"
