[package]
name = "kornia_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.0"
pyo3 = { version = "0.15.1", features = ["extension-module"] }
vviz = "0.3.0"
turbojpeg = {version = "^0.2", features = ["image"], path = "../rust-turbojpeg"}

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.3", features = ["flamegraph"] }


[[bench]]
name = "my_benchmark"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kornia_rs"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[[bin]]
name = "kornia_app"
path = "src/main.rs"
