[package]
name = "kornia_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.0"
vviz = {version = "0.3.0", path = "../vviz"}
turbojpeg = {version = "^0.2", features = ["image"], git = "https://github.com/edgarriba/rust-turbojpeg", branch = "fix/colot_format"}
pyo3 = { version = "0.15.1", features = ["extension-module"] }

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.3", features = ["flamegraph"] }


[[bench]]
name = "my_benchmark"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kornia_rs"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"